--- a/Styles/style.css
+++ b/Styles/style.css
@@ -25,6 +25,21 @@
     border: none;
 }
 
+.secondary-bg{
+    background-color: #FFF8F3;
+}
+
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+
 /* header */
 
 .header{
@@ -95,4 +110,28 @@ nav li a{
 .banner .banner-profile-pic{
     width: 584px;
     height: 676px;
+}
+
+/* about-styles */
+
+.about{
+    border-radius: 10px;
+    padding: 130px 156px;
+    text-align: center;
+    margin-top: 130px;
+}
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.item-des{
+    font-weight: bold;
+}
+
+.about-items{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
