--- a/Styles/style.css
+++ b/Styles/style.css
@@ -112,18 +112,24 @@ nav li a{
     height: 676px;
 }
 
+/* main section */
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
 /* about-styles */
 
 .about{
     border-radius: 10px;
     padding: 130px 156px;
     text-align: center;
-    margin-top: 130px;
-}
-
-main{
-    max-width: 1140px;
-    margin: 0 auto;
 }
 
 .item-des{
@@ -134,4 +140,26 @@ main{
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+
+/* skills styles */
+
+.skills .section-title{
+    text-align: center;
+}
+
+.skills .section-description{
+    text-align: center;
+    padding: 0 110px;
+}
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    border-radius: 5px;
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
