--- a/Styles/style.css
+++ b/Styles/style.css
@@ -191,3 +191,25 @@ main section{
     margin-top: 50px;
     text-align: center;
 }
+
+/* footer section styles */
+
+footer{
+    display: flex;
+    padding: 130px 230px;
+    gap: 117px;
+}
+
+.footer-column{
+    width: 50%;
+}
+
+footer #same{
+    padding: 18px 30px;
+    color: #757575;
+    border-radius: 5px;
+    border: none;
+    display: block;
+    margin-bottom: 24px;
+    width: 400px;
+}
